# Delphinium-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: error.rs  lib.rs
src/dto/: list.rs  mod.rs  search.rs  thumbnail.rs
src/entities/: artist.rs  character.rs  file.rs  galleryinfo.rs  group.rs  info.rs  language.rs  mod.rs  parody.rs  resolved_image.rs  tag.rs  tags.rs
