[package]
name = "delphinium"
version = "1.1.0"
edition = "2024"
description = "Hitomi API(Heliotrope) Rust wrapper"
license = "MIT"
repository = "https://github.com/Saebasol/delphinium-rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"]}
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
